Fixed horizontal scrolling in mobile view.
The fix was fairly simple: Target the parent div of the menus and apply overflow-x: hidden there instead of on the body tag.

--- a/acorn/src/App.css
+++ b/acorn/src/App.css
@@ -1,4 +1,5 @@
 
+/*
 
 .dot {
     height: 100px;
@@ -32,4 +33,13 @@
     height: 200px;
     background-size: cover;
 
+}
+
+
+*/
+
+.top {
+    height: 100vh;
+    position: relative;
+    overflow-x: hidden;
 }
