--- a/acorn/src/index.css
+++ b/acorn/src/index.css
@@ -16,7 +16,6 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  min-height: 100vh;
   font-family: Fraunces;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
